--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^7.5.0",
     "nodemailer": "^6.9.5",
     "otp-generator": "^4.0.1",
-    "react-avatar": "^5.0.3"
+    "react-avatar": "^5.0.3",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
